# datto-rmm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  commitlint.config.js  package.json  pnpm-lock.yaml  turbo.json
.ai-docs/: README.md
.ai-docs/instructions/: ai-docs-sync.instructions.md  code-style.instructions.md  commands.instructions.md  documentation.instructions.md  project-overview.instructions.md  workflow.instructions.md
.ai-docs/plans/: documentation-framework-selection.md  mcp-server-implementation.md
.ai-docs/prompts/: context.prompt.md  docs.prompt.md  plan.prompt.md  review.prompt.md
.claude/: CLAUDE.md  README.md  settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml  sync-api.yml
apps/docs/: astro.config.mjs  package.json
apps/docs/src/content/docs/: index.mdx
apps/docs/src/styles/: custom.css
apps/mcp-server/: .gitignore  README.md  package.json  tsconfig.json
apps/mcp-server/src/: config.ts  index.ts  server.ts  types.ts
apps/mcp-server/src/resources/: index.ts
apps/mcp-server/src/tools/: account.ts  activity.ts  alerts.ts  audit.ts  devices.ts  filters.ts  index.ts  jobs.ts  sites.ts  system.ts  variables.ts
apps/mcp-server/src/utils/: formatting.ts  index.ts  pagination.ts  response.ts
crates/datto-api/: .gitignore  Cargo.toml  README.md  build.rs
crates/datto-api/src/: client.rs  lib.rs  platforms.rs
specs/: README.md  datto-rmm-openapi.json
tooling/scripts/: generate-api-clients.sh  setup-claude-files.sh  sync-openapi-spec.sh  validate-ai-docs.sh
(+10 files in other folders)
