[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/josh-fisher/datto-rmm"
authors = ["josh-fisher"]
keywords = ["datto", "rmm", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]
